Enhancements made to the structure of code